--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -12,10 +12,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/linearLayout"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="17dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="12dp"
         android:layout_weight="1"
-        android:orientation="horizontal"
-        android:layout_alignParentLeft="true">
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/registration"
@@ -94,6 +96,15 @@
             android:inputType="textPassword" />
 
         <EditText
+            android:id="@+id/full_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Full Name"
+            android:textSize="12dp"
+            android:inputType="textPersonName" />
+
+        <EditText
             android:id="@+id/address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -112,6 +123,15 @@
             android:inputType="textPersonName" />
 
         <EditText
+            android:id="@+id/state"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="State"
+            android:textSize="12dp"
+            android:inputType="textPersonName" />
+
+        <EditText
             android:id="@+id/zip_code"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -127,15 +147,6 @@
             android:ems="10"
             android:textSize="12dp"
             android:hint="Country"
-            android:inputType="textPersonName" />
-
-        <EditText
-            android:id="@+id/phone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:textSize="12dp"
-            android:hint="Phone Number"
             android:inputType="textPersonName" />
 
 
