--- a/app/src/main/res/layout/calculatesalary.xml
+++ b/app/src/main/res/layout/calculatesalary.xml
@@ -57,7 +57,7 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="Enter Salary"
-        android:inputType="number"
+        android:inputType="number|numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.42"
         app:layout_constraintStart_toStartOf="parent"
